# gpon-diag

./: .gitignore  .mcp.json  AGENTS.md  AGENT_WORKING.md  CLAUDE portable.lnk  CLAUDE.md  Dockerfile  FINE-TUNING-DIAG.md  GPON-DIAG-PROMPT.md  GPON_class.py  MCP_README.md  MCP_SERVER.md  OPENCODE.md  PI_CONTEXT.md  PROMPTS.md  QWEN.md  README.md  REFACTORING_PLAN.md  SQL.md  TODO.md  batch_diagnose.py  check_server.py  config.yaml  debug_test.py  diagnose.py  extract_onts.py  fix_olt.py  loop_run.py  main.py  mcp_server.py  open-browser.ps1  package-lock.json  probe_all.py  pyproject.toml  rule_gen.py  run_diag.py  run_mcp.sh  run_waitress.py  securecrt_adapter.py  set_env_and_probe.py  (+18 more)
.claude/: settings.local.json
.claude/memory/: MEMORY.md  project_structure.md  refactoring_plan.md
.claude/skills/spec-pilot/: CHEATSHEET.md  INSTRUCTION.md  README.md  (+2 more)
.kiro/steering/: spec-pilot.md
.mimocode/: check_db.py  check_project.py
.mimocode/plans/: 1781974566799-tidy-wizard.md  1781974676770-witty-orchid.md
.qwen/: settings.json
DOC/: TODO.md
core/: __init__.py  adapter.py  cli_diagnosis.py  collector.py  config_parser.py  config_validator.py  connection_diagnosis.py  connection_pool.py  constants.py  crt_stub.py  data_collector.py  data_extractor.py  diagnose_logic.py  engine.py  loop_runner.py  models.py  olt.py  olt_helpers.py  parser.py  report.py  reporter.py  telnet_session.py  threshold_evaluator.py  thresholds.py  utils.py
data/: TODO.md  loop_tasks.json  onts_example.txt  subscribers_example.csv
hermes-lockutils/: SKILL.md  __init__.py  file_lock.py  file_lock.sh
orchestrator/: __init__.py  agent_client.py  agent_registry.py  external_control.py  lock_manager.py  orchestrator_cli.py  outer_loop.py  task_card.py  validator.py
output/: onts_test.json
scripts/: check_and_start_server.py  run_server.py
tests/: test_history_during_diagnosis_parsing.py  test_loop_runner.py  test_orchestrator_delete.py  test_smoke.py
web/: app.py
web/api/: deps.py  exceptions.py  main.py  models.py
web/templates/: base.html  dashboard.html  index.html  result.html
(+35 files in other folders)
