[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpon-diag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "telnetlib3>=4.0.4",
    "python-dotenv>=1.0.0",
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["web", "core", "data", "interfaces"]