[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpon-diag"
version = "0.2.0"
description = "GPON Diagnostics Framework for Huawei MA5600 — FastAPI + React"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pyyaml>=6.0.3",
    "telnetlib3>=4.0.4",
    "python-dotenv>=1.0.0",

    # FastAPI Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "anyio>=4.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",

    # Frontend (build-time, not runtime)
    # npm/pnpm handles React, Vite, Tailwind

    # Legacy Flask (kept for migration period)
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.0.0",
    "waitress>=2.1.0",

    # Utilities
    "pyperclip>=1.8.2",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools]
packages = ["web", "core", "data", "interfaces", "orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.scripts]
gpon-orchestrator = "orchestrator.orchestrator_cli:main"